refactor: consolidate salary grade creation methods and improve validation logic